--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -25,3 +25,41 @@
 .tagline {
   display: none;
 }
+.social-media-icons {
+  margin: -12px 0 $baseline-height * 2;
+  list-style: none;
+  display: none;
+  padding: 0 $column * 2;
+  opacity: 1;
+  visibility: visible;
+  transition: transform 0.25s;
+
+  &.moved {
+    display: block;
+  }
+  li {
+    display: inline-block;
+    margin-right: 8px;
+    text-align: center;
+  }
+  a {
+    @extend %white-link;
+    line-height: 30px;
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    border: solid 1px #fff;
+    border-radius: 3px;
+    transition: color 0.15s, border-color 0.15s;
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: $color-gray-86;
+      border-color: $color-gray-86;
+    }
+  }
+  i {
+    vertical-align: middle;
+  }
+}
