--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -14,6 +14,7 @@
   position: relative;
   z-index: 19;
   display: inline-block;
+  max-width: calc(100% - 96px);
 }
 .site-title {
   font-family: $abril-fatface;
@@ -61,5 +62,73 @@
   }
   i {
     vertical-align: middle;
+  }
+}
+.search-toggle {
+  position: relative;
+  z-index: 19;
+  float: left;
+  border: solid 1px $color-gray-86;
+  border-radius: 3px;
+  background: none;
+  margin: 0;
+  padding: 8px 10px;
+  margin-right: -36px;
+  transition: border-color 0.35s;
+
+  &:hover {
+    cursor: pointer;
+  }
+  &.open {
+    border-color: #000;
+  }
+  &:focus {
+    outline: none;
+  }
+  i {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+.display-search {
+
+  .search-form-popup {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.search-form-popup {
+  position: fixed;
+  z-index: 49;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(255,255,255,0.9);
+  padding: $baseline-height * 2.5 $column * 2;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.25s, visibility 0.25s;
+
+  .title {
+    margin-bottom: 18px;
+    font-weight: 700;
+  }
+  .search-form {
+    display: flex;
+  }
+  .search-field {
+    border-radius: 18px 0 0 18px;
+    margin-right: 0;
+    border-right: none;
+  }
+  .search-submit {
+    border-radius: 0 18px 18px 0;
+    margin-left: 0;
+  }
+  .close {
+    position: absolute;
+    top: $baseline-height * 0.75;
+    left: $column * 2;
   }
 }
