--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,10 +21,14 @@
 
   a {
     @extend %black-link;
+    transition: color 0.15s;
   }
 }
 .tagline {
+  @extend %fourteen-pixels;
   display: none;
+  font-style: italic;
+  margin: 0;
 }
 .social-media-icons {
   margin: -12px 0 $baseline-height * 2;
@@ -76,6 +80,15 @@
   margin-right: -36px;
   transition: border-color 0.35s;
 
+  span {
+    @extend %uppercase;
+    display: none;
+    font-family: $pt-sans;
+    font-size: 12px;
+    line-height: 1.5;
+    font-weight: 700;
+    margin-left: 6px;
+  }
   &:hover {
     cursor: pointer;
   }
@@ -104,7 +117,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(255,255,255,0.9);
+  background: rgba(255,255,255,0.98);
   padding: $baseline-height * 2.5 $column * 2;
   opacity: 0;
   visibility: hidden;
@@ -123,12 +136,162 @@
     border-right: none;
   }
   .search-submit {
+    @extend %uppercase;
     border-radius: 0 18px 18px 0;
     margin-left: 0;
+    font-weight: 700;
   }
   .close {
     position: absolute;
     top: $baseline-height * 0.75;
     left: $column * 2;
+  }
+}
+
+@media all and (min-width: $five-hundred) {
+
+  .search-form-popup {
+
+    .title {
+      font-size: 1.125em; /* 18px / 16px */
+      line-height: 1.333; /* 24px */
+    }
+  }
+}
+
+@media all and (min-width: $six-hundred) {
+
+  .site-title {
+    font-size: 1.3125em; /* 21px / 16px */
+    line-height: 1.143; /* 24px */
+  }
+  .search-form-popup {
+
+    .title {
+      font-size: 1.3125em; /* 21px / 16px */
+      line-height: 1.143; /* 24px */
+      margin-bottom: 24px;
+    }
+    .search-form {
+      max-width: 560px;
+      margin: 0 auto;
+    }
+  }
+}
+
+@media all and (min-width: $eight-hundred) {
+
+  .site-header {
+    padding: $baseline-height * 0.75 $column;
+    border-bottom: 0;
+
+    .date {
+      display: inline-block;
+      position: absolute;
+      left: 0;
+      bottom: -18px;
+      font-family: $pt-sans;
+      font-size: 12px;
+      line-height: 1.5;
+      font-weight: 700;
+    }
+  }
+  .title-container {
+    display: block;
+    max-width: 100%;
+    margin-bottom: $baseline-height;
+  }
+  .site-title {
+    font-size: 1.75em; /* 28px / 16px */
+    line-height: 1.357; /* 38px */
+  }
+  .tagline {
+    display: block;
+  }
+  .top-nav {
+    margin-bottom: $baseline-height/4;
+
+    &:after {
+      @include clearfix;
+    }
+  }
+  .social-media-icons {
+    display: block;
+    margin: 0;
+    padding: 0;
+    float: right;
+    line-height: 0;
+
+    a {
+      font-size: 14px;
+      line-height: 18px;
+      width: 24px;
+      height: 24px;
+      color: #000;
+      border: solid 1px #000;
+
+      &:link,
+      &:visited {
+        color: #000;
+      }
+      &:hover,
+      &:active,
+      &:focus {
+        color: $color-gray-40;
+        border-color: $color-gray-40;
+      }
+    }
+  }
+  .search-toggle {
+    position: relative;
+    border: none;
+    padding: 0;
+    margin: 0 18px 0 0;
+
+    span {
+      display: inline-block;
+    }
+    i {
+      font-size: 12px;
+      line-height: 1.5;
+    }
+  }
+  .search-form-popup {
+    padding-top: $baseline-height * 3;
+
+    .title {
+      font-size: 1.75em; /* 28px / 16px */
+      line-height: 1.357; /* 38px */
+    }
+    .search-field {
+      padding: 14px 12px;
+      border-radius: 24px 0 0 24px;
+    }
+    .search-submit {
+      padding: 15px 18px;
+      border-radius: 0 24px 24px 0;
+    }
+  }
+}
+
+@media all and (min-width: $one-thousand) {
+
+  .site-title {
+    font-size: 2.375em; /* 38px / 16px */
+    line-height: 1.342; /* 51px */
+  }
+  .tagline {
+    font-size: 1em;
+    line-height: 1.5;
+  }
+  .search-form-popup {
+
+    .title {
+      font-size: 2.375em; /* 38px / 16px */
+      line-height: 1.342; /* 51px */
+    }
+    .search-form {
+      max-width: 680px;
+    }
   }
 }
