--- a/sass/_menu_secondary.scss
+++ b/sass/_menu_secondary.scss
@@ -59,7 +59,6 @@
       color: #fff;
     }
   }
-
   ul {
     position: fixed;
     top: -12px;
@@ -105,17 +104,23 @@
     line-height: 0; // aligns menu with search bar (lets menu items 18px line-height replace 24px line-height)
 
     li {
+      position: relative;
+      z-index: 29;
       display: inline-block;
       border-bottom: none;
       margin-right: 8px;
 
-      //&.current-menu-item,
-      //&.current-menu-ancestor {
-      //
-      //  > a {
-      //    text-decoration: underline;
-      //  }
-      //}
+      &.menu-item-has-children {
+
+        > a:after {
+          content: '\f107';
+          font-family: "FontAwesome";
+          position: relative;
+          margin-left: 3px;
+          line-height: 1;
+          top: 0;
+        }
+      }
     }
     a {
       display: inline-block;
@@ -130,33 +135,116 @@
       &:active,
       &:focus {
         color: $color-gray-40;
+
+        ~ ul {
+          opacity: 1;
+          visibility: visible;
+          transform: translateX(-12px);
+
+          &:before {
+            width: 100%;
+          }
+        }
+        &:before {
+          content: '';
+          position: absolute;
+          left: 0;
+          width: 100%;
+          top: 100%;
+          height: 10px;
+        }
       }
     }
-
-    // NEED TO UPDATE THIS
     ul {
-      position: fixed;
-      top: -12px;
-      left: 100%;
-      width: 100%;
-      list-style: none;
-      margin: 0;
-      padding: 0 $column * 2;
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 0.35s, visibility 0.35s;
+      position: absolute;
+      z-index: 19;
+      top: calc(100% + 4px);
+      left: $baseline-height/2;
+      width: auto;
+      min-width: 100%;
+      padding: 0;
+      background: #fff;
+      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
+      text-align: left;
+      transition: opacity 0.25s, visibility 0.25s, transform 0.15s;
 
-      ul {
-        left: 200%;
+      &:hover {
+        opacity: 1;
+        visibility: visible;
+        transform: translateX(-12px);
+
+        &:before {
+          width: 100%;
+        }
       }
-      ul ul {
-        left: 300%;
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 0;
+        height: 1px;
+        background-image: linear-gradient(to right, #000, $color-gray-86);
+        transition: width 0.2s;
       }
-      ul ul ul {
-        left: 400%;
+      li {
+        display: block;
+        font-size: 0.875em; /* 14px / 16px */
+        line-height: 1.571; /* 22px */
+        white-space: nowrap;
+        margin-right: 0;
+
+        &.menu-item-has-children {
+
+          > a {
+            position: relative;
+
+            &:after {
+              content: '\f105';
+              position: absolute;
+              top: 10px;
+              right: 12px;
+            }
+          }
+          // reposition ">" based on increased padding-top
+          &:first-child > a:after {
+            top: 14px;
+          }
+        }
+        li {
+          font-size: 1em;
+        }
+        &:first-child a {
+          padding-top: 12px;
+        }
+        &:last-child a {
+          padding-bottom: 12px;
+        }
       }
+      a {
+        display: block;
+        padding: 6px 36px 6px 24px;
+
+        &:hover,
+        &:active,
+        &:focus {
+
+          &:before {
+            content: '';
+            position: absolute;
+            left: 100%;
+            width: 100%;
+            top: 0;
+            height: 100%;
+          }
+        }
+      }
+      ul,
+      ul ul,
+      ul ul ul,
       ul ul ul ul {
-        left: 500%;
+        left: calc(100% + 12px);
+        top: 0;
       }
     }
   }
