--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -143,7 +143,7 @@
     &.current,
     &.current-ancestor {
 
-      ul {
+      > ul {
         opacity: 1;
         visibility: visible;
       }
